--- a/application/modules/Admin/views/basesetting/index.html
+++ b/application/modules/Admin/views/basesetting/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="layui-form-item">
                             <label for="webdescription" class="layui-form-label">站点描述</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-block">
                                 <input type="text" id="webdescription" autocomplete="off" value="<?php echo $config['webdescription'];?>" class="layui-input">
                             </div>
                         </div>
@@ -40,25 +40,25 @@
                         </div>
                         <div class="layui-form-item">
                             <label for="logo" class="layui-form-label">站点logo</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-block">
                                 <input type="text" id="logo" autocomplete="off" value="<?php echo $config['logo'];?>" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label for="shortcuticon" class="layui-form-label">站点ICO</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-block">
                                 <input type="text" id="shortcuticon" autocomplete="off" value="<?php echo $config['shortcuticon'];?>" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label for="backgroundimage" class="layui-form-label">站点背景图</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-block">
                                 <input type="text" id="backgroundimage" autocomplete="off" value="<?php echo $config['backgroundimage'];?>" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-form-item">
                             <label for="tongji" class="layui-form-label">站点统计</label>
-                            <div class="layui-input-inline">
+                            <div class="layui-input-block">
 								<textarea placeholder="" id="tongji" name="tongji" autocomplete="off" class="layui-textarea" style="height: 80px;"><?php echo $config['tongji'];?></textarea>
                             </div>
                         </div>
