--- a/application/modules/Admin/views/basesetting/index.html
+++ b/application/modules/Admin/views/basesetting/index.html
@@ -56,7 +56,7 @@
                                 <input type="text" id="backgroundimage" autocomplete="off" value="<?php echo $config['backgroundimage'];?>" class="layui-input">
                             </div>
                         </div>
-                        <div class="layui-form-item">
+                        <div class="layui-form-item layui-form-text">
                             <label for="tongji" class="layui-form-label">站点统计</label>
                             <div class="layui-input-block">
 								<textarea placeholder="" id="tongji" name="tongji" autocomplete="off" class="layui-textarea" style="height: 80px;"><?php echo $config['tongji'];?></textarea>
