--- a/templates/shadan/common/footer.html
+++ b/templates/shadan/common/footer.html
@@ -1,5 +1,6 @@
 	<div class="fly-footer">
-	  <p>Powered by <a href="https://github.com/zlkbdotnet/zfaka/" target="_blank">ZFAKA <?php echo VERSION;?></a></p>
+		<p>版权所有 ©<?php echo $config['webname'];?> <?php if($config['icp']):?><a href="http://www.beian.miit.gov.cn" target="_blank">备案号：<?php echo $config['icp'];?></a><?php endif;?></p>
+		<p>Powered by <a href="https://github.com/zlkbdotnet/zfaka/" target="_blank">ZFAKA <?php echo VERSION;?></a></p>
 	</div>
 <script src="/res/layui/layui.js"></script>
 <script>
