--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -18,7 +18,11 @@
 					  <div carousel-item>
 						<?php if(isset($items_banner) AND !empty($items_banner)):?>
 							<?php foreach($items_banner AS $banner):?>
-							<div><img src="<?php echo $banner['image'];?>"></div>
+								<?php if($banner['url']):?>
+								<div><a href="<?php echo $banner['url'];?>" title="<?php echo $banner['title'];?>"><img alt="<?php echo $banner['title'];?>" src="<?php echo $banner['image'];?>"></a></div>
+								<?php else:?>
+								<div><img alt="<?php echo $banner['title'];?>" src="<?php echo $banner['image'];?>"></div>
+								<?php endif;?>
 							<?php endforeach;?>
 						<?php endif;?>
 					  </div>
