--- a/application/modules/Member/views/common/header.html
+++ b/application/modules/Member/views/common/header.html
@@ -43,10 +43,7 @@
                 </li>
                 <?php else:?>
                 <li class="layui-nav-item layui-hide-xs">
-                    <a href="/product">购买商品</a>
-                </li>
-                <li class="layui-nav-item layui-hide-xs">
-                    <a href="/product/query">查询订单</a>
+                    <a href="/">返回首页</a>
                 </li>
                 <?php endif;?>
             </ul>
