改造设置中心路径

--- a/application/modules/Admin/views/common/header.html
+++ b/application/modules/Admin/views/common/header.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div class="fly-header <?php if(isset($config['headermenucolor']) AND strlen($config['headermenucolor'])>0):?><?php echo $config['headermenucolor'];?><?php else:?>layui-bg-black<?php endif;?>">
+    <div class="fly-header layui-bg-black">
         <div class="layui-container">
             <div class="layui-hide-xs"><a class="fly-logo" href="/<?php echo ADMIN_DIR;?>"><img src="<?php if(isset($config['logo']) AND strlen($config['logo'])>0):?><?php echo $config['logo'];?><?php else:?>/res/images/logo.png<?php endif;?>" alt="zfaka"></a></div>
             <ul class="layui-nav fly-nav" id="webmenu">
