--- a/application/modules/Admin/views/setting/index.html
+++ b/application/modules/Admin/views/setting/index.html
@@ -1,46 +1,69 @@
 <?php include ADMIN_COMMON_PATH.'/header.html';?>
 <div class="layui-container fly-marginTop fly-user-main">
-    <?php include ADMIN_COMMON_PATH.'/setting-nav.html';?>
+    <?php include ADMIN_COMMON_PATH.'/index-nav.html';?>
     <div class="fly-panel fly-panel-user" pad20>
         <div class="layui-tab layui-tab-brief" lay-filter="user">
             <ul class="layui-tab-title" id="LAY_mine">
-                <li class="layui-this" lay-id="info">配置中心</li>
+                <li class="layui-this" lay-id="info">基础设置</li>
             </ul>
             <div class="layui-tab-content" style="padding: 20px 0;">
-                <div class="layui-form layui-form-pane layui-tab-item layui-show">
-                    <div class="layui-form-item layui-show">
-						<blockquote class="layui-elem-quote">
-							<p> 注意事项： </p>
-							<p> 如果配置中心列表中出现了"数据接口请求异常"，<button lay-submit class="layui-btn" lay-filter="repair">点击修复</button></p>
-						</blockquote>
-                        <table class="layui-table" id="setting"></table>
-                    </div>
+                <div class="layui-form-pane layui-tab-item layui-show">
+                    <blockquote class="layui-elem-quote">
+                        <p>
+							注意事项： 请根据实际情况自行填写。
+						</p>
+                    </blockquote>
+                    <form class="layui-form layui-show" method="post">
+                        <div class="layui-form-item">
+                            <label for="weburl" class="layui-form-label">站点地址</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="weburl" autocomplete="off" value="<?php echo $config['weburl'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="webname" class="layui-form-label">站点名称</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="webname" autocomplete="off" value="<?php echo $config['webname'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="webdescription" class="layui-form-label">站点描述</label>
+                            <div class="layui-input-block">
+                                <input type="text" id="webdescription" autocomplete="off" value="<?php echo $config['webdescription'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="adminemail" class="layui-form-label">管理员邮箱</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="adminemail" autocomplete="off" value="<?php echo $config['adminemail'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="logo" class="layui-form-label">站点logo</label>
+                            <div class="layui-input-block">
+                                <input type="text" id="logo" autocomplete="off" value="<?php echo $config['logo'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="shortcuticon" class="layui-form-label">站点ICO</label>
+                            <div class="layui-input-block">
+                                <input type="text" id="shortcuticon" autocomplete="off" value="<?php echo $config['shortcuticon'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="backgroundimage" class="layui-form-label">站点背景图</label>
+                            <div class="layui-input-block">
+                                <input type="text" id="backgroundimage" autocomplete="off" value="<?php echo $config['backgroundimage'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item layui-form-text">
+                            <label for="tongji" class="layui-form-label">站点统计</label>
+                            <div class="layui-input-block">
+								<textarea placeholder="" id="tongji" name="tongji" autocomplete="off" class="layui-textarea" style="height: 80px;"><?php echo $config['tongji'];?></textarea>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <script type="text/javascript">
-                function createTime(v) {
-                    var date = new Date();
-                    date.setTime(parseInt(v) * 1000);
-                    var y = date.getFullYear();
-                    var m = date.getMonth() + 1;
-                    m = m < 10 ? '0' + m : m;
-                    var d = date.getDate();
-                    d = d < 10 ? ("0" + d) : d;
-                    var h = date.getHours();
-                    h = h < 10 ? ("0" + h) : h;
-                    var M = date.getMinutes();
-                    M = M < 10 ? ("0" + M) : M;
-                    var s = date.getSeconds();
-                    s = s < 10 ? ("0" + s) : s;
-                    var str = y + "-" + m + "-" + d + " " + h + ":" + M + ":" + s;
-                    return str;
-                }
-                </script>
-                <script type="text/html" id="updatetime">
-                    {{ createTime(d.updatetime) }}
-                </script>
-                <script type="text/html" id="opt">
-                    <a class="layui-btn layui-btn-warm layui-btn-xs" href="/<?php echo ADMIN_DIR;?>/setting/edit/?id={{d.id}}">编辑</a>
-                </script>
             </div>
         </div>
     </div>
@@ -48,5 +71,5 @@
 <!--引入公共底文件-->
 <?php include ADMIN_COMMON_PATH.'/footer.html';?>
 <script>
-layui.use('adminsetting');
+layui.use('adminprofiles');
 </script>
