--- a/application/modules/Admin/views/setting/index.html
+++ b/application/modules/Admin/views/setting/index.html
@@ -1,6 +1,6 @@
 <?php include ADMIN_COMMON_PATH.'/header.html';?>
 <div class="layui-container fly-marginTop fly-user-main">
-    <?php include ADMIN_COMMON_PATH.'/index-setting.html';?>
+    <?php include ADMIN_COMMON_PATH.'/setting-nav.html';?>
     <div class="fly-panel fly-panel-user" pad20>
         <div class="layui-tab layui-tab-brief" lay-filter="user">
             <ul class="layui-tab-title" id="LAY_mine">
