--- a/application/modules/Admin/views/setting/order.html
+++ b/application/modules/Admin/views/setting/order.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="layui-form-item">
                             <label for="limitorderqty" class="layui-form-label">数量限制</label>
-                            <div class="layui-input-block">
+                            <div class="layui-input-inline">
                                 <input type="text" id="limitorderqty" autocomplete="off" value="<?php echo $config['limitorderqty'];?>" class="layui-input">
                             </div>
 							<div class="layui-form-mid layui-word-aux">单笔订单数量限制</div>
@@ -45,7 +45,7 @@
                         </div>
                         <div class="layui-form-item">
                             <label for="limitiporder" class="layui-form-label">IP限制</label>
-                            <div class="layui-input-block">
+                            <div class="layui-input-inline">
                                 <input type="text" id="limitiporder" autocomplete="off" value="<?php echo $config['limitiporder'];?>" class="layui-input">
                             </div>
 							<div class="layui-form-mid layui-word-aux">同一ip当日下单限制（针对未付款订单）,不限制请设置为0</div>
