--- a/application/modules/Admin/views/setting/index.html
+++ b/application/modules/Admin/views/setting/index.html
@@ -6,6 +6,7 @@
             <ul class="layui-tab-title" id="LAY_mine">
                 <li class="layui-this" lay-id="info">基础设置</li>
 				<li class="" lay-id="info"><a href="/<?php echo ADMIN_DIR;?>/setting/order/">订单设置</a></li>
+				<li class="" lay-id="info"><a href="/<?php echo ADMIN_DIR;?>/setting/switch/">开关设置</a></li>
             </ul>
             <div class="layui-tab-content" style="padding: 20px 0;">
                 <div class="layui-form-pane layui-tab-item layui-show">
