--- a/templates/shadan/common/header.html
+++ b/templates/shadan/common/header.html
@@ -42,7 +42,7 @@
                     <a href="/product">购买商品</a>
                 </li>
 				<?php else:?>
-				<li></li>
+				<li class="layui-nav-item layui-hide-xs"></li>
 				<?php endif;?>
                 <li class="layui-nav-item layui-hide-xs">
                     <a href="/member/help">帮助中心</a>
